--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -7489,7 +7489,7 @@
     },
     "skills.TRM_EXORSIST_TECHNIQUES.name": {
         "en": "",
-        "fr": "",
+        "fr": "Technique d'Excorcisme",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7507,7 +7507,7 @@
     },
     "skills.TRM_EXORSIST_TECHNIQUES.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente Dégâts Améliorés de {0}%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7525,7 +7525,7 @@
     },
     "skills.TRM_EXORSIST_TECHNIQUES.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Précision +2%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7543,7 +7543,7 @@
     },
     "skills.TRM_EXORSIST_TECHNIQUES.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Esquive +3%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7561,7 +7561,7 @@
     },
     "skills.TRM_EXORSIST_TECHNIQUES.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "ATQ de Base +20",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7579,7 +7579,7 @@
     },
     "skills.TRM_PRECISION.name": {
         "en": "",
-        "fr": "",
+        "fr": "Précision",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7597,7 +7597,7 @@
     },
     "skills.TRM_PRECISION.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente Précision et Précision Compétence de {0}%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7615,7 +7615,7 @@
     },
     "skills.TRM_PRECISION.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "PV max +500",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7633,7 +7633,7 @@
     },
     "skills.TRM_PRECISION.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Compétence Critique +3%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7651,7 +7651,7 @@
     },
     "skills.TRM_PRECISION.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "VIT ATQ +5%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7669,7 +7669,7 @@
     },
     "skills.TRM_QUICK_REFLEXES.name": {
         "en": "",
-        "fr": "",
+        "fr": "Mouvement Rapide",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7687,7 +7687,7 @@
     },
     "skills.TRM_QUICK_REFLEXES.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente Esquive Compétence de {0}%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7705,7 +7705,7 @@
     },
     "skills.TRM_QUICK_REFLEXES.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Esquive +2%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7723,7 +7723,7 @@
     },
     "skills.TRM_QUICK_REFLEXES.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "VIT ATQ +3%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7741,7 +7741,7 @@
     },
     "skills.TRM_QUICK_REFLEXES.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "PV max +700",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7759,7 +7759,7 @@
     },
     "skills.TRM_ENHANCE_HASTE.name": {
         "en": "",
-        "fr": "",
+        "fr": "Hâte Améliorée",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7777,61 +7777,7 @@
     },
     "skills.TRM_ENHANCE_HASTE.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRM_ENHANCE_HASTE.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRM_ENHANCE_HASTE.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRM_ENHANCE_HASTE.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Réduis le Temps de Recharge de Hâte de 9 sec, réduis aussi le coût en mana de 15",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7849,7 +7795,7 @@
     },
     "skills.TRM_BUILDING_BRAVERY.name": {
         "en": "",
-        "fr": "",
+        "fr": "Création de Vertu",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7867,7 +7813,7 @@
     },
     "skills.TRM_BUILDING_BRAVERY.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente l'attaque de {0} lorsqu'une attaque touche. Peut s'accumuler 10 fois. Dure 10sec.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7885,7 +7831,7 @@
     },
     "skills.TRM_BUILDING_BRAVERY.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "ATQ de Base +8",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7903,7 +7849,7 @@
     },
     "skills.TRM_BUILDING_BRAVERY.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Précision Critique +2%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7921,7 +7867,7 @@
     },
     "skills.TRM_BUILDING_BRAVERY.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Durée du bonus +10 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7939,7 +7885,7 @@
     },
     "skills.TRM_QUICK_RELOAD.name": {
         "en": "",
-        "fr": "",
+        "fr": "Reharge Rapide",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7957,7 +7903,7 @@
     },
     "skills.TRM_QUICK_RELOAD.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Vous avez {0}% de chance d'exécuter une attaque supplémentaire. Ne peut s'activer qu'une fois toutes les 3 sec.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7975,7 +7921,7 @@
     },
     "skills.TRM_QUICK_RELOAD.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Les chances d'activer l'effet sont augmentés de 7%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7993,7 +7939,7 @@
     },
     "skills.TRM_QUICK_RELOAD.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "VIT ATQ +2%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8011,7 +7957,7 @@
     },
     "skills.TRM_QUICK_RELOAD.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Réduis le délai d'activation de 1 sec.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8029,7 +7975,7 @@
     },
     "skills.TRM_RUNNING_SHOT.name": {
         "en": "",
-        "fr": "",
+        "fr": "Tir en Mouvement",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8047,61 +7993,7 @@
     },
     "skills.TRM_RUNNING_SHOT.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRM_RUNNING_SHOT.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRM_RUNNING_SHOT.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRM_RUNNING_SHOT.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Réduis RD DGTS de 5% et VIT de 15% Dure 20 sec. Peut s'accumuler 3 fois.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8119,7 +8011,7 @@
     },
     "skills.TRM_ENHANCE_HOMING_ARROW.name": {
         "en": "",
-        "fr": "",
+        "fr": "Flèches Guidées Améliorées",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8137,7 +8029,7 @@
     },
     "skills.TRM_ENHANCE_HOMING_ARROW.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente les dégâts de Flèches Guidées de {0}",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8155,7 +8047,7 @@
     },
     "skills.TRM_ENHANCE_HOMING_ARROW.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente les dégâts de Flèches Guidées de +330",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8173,7 +8065,7 @@
     },
     "skills.TRM_ENHANCE_HOMING_ARROW.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Flèche Guidée étourdit la cible pour 1 sec.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8191,7 +8083,7 @@
     },
     "skills.TRM_ENHANCE_HOMING_ARROW.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Temps de Recharge de Flèches Guidées réduit de 4 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8209,7 +8101,7 @@
     },
     "skills.TRM_WEAKEN_ATTACK.name": {
         "en": "",
-        "fr": "",
+        "fr": "Affaiblissement",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8227,7 +8119,7 @@
     },
     "skills.TRM_WEAKEN_ATTACK.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente Vitesse d'Attaque de {0}",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8245,7 +8137,7 @@
     },
     "skills.TRM_WEAKEN_ATTACK.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Précision Critique +1%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8263,7 +8155,7 @@
     },
     "skills.TRM_WEAKEN_ATTACK.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Amélioration Critique +5%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8281,7 +8173,7 @@
     },
     "skills.TRM_WEAKEN_ATTACK.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Vos attaques réduisent Dégâts Améliorés de la cible de 1,5% pendant 5 sec. Peut s'accumuler 5 fois",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8299,7 +8191,7 @@
     },
     "skills.TRM_COMBAT_MASTER.name": {
         "en": "",
-        "fr": "",
+        "fr": "Maître de Guerre",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8317,61 +8209,7 @@
     },
     "skills.TRM_COMBAT_MASTER.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRM_COMBAT_MASTER.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRM_COMBAT_MASTER.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRM_COMBAT_MASTER.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Permet de se déplacer durant Coup de Feu. Réduis le Temps de Recharge de Coup de Feu de 18 sec. L'effet n'est plus limité par un nombre d'attaques.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8389,7 +8227,7 @@
     },
     "skills.TRM_MANA_BURN.name": {
         "en": "",
-        "fr": "",
+        "fr": "Évaporateur de Mana",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8407,7 +8245,7 @@
     },
     "skills.TRM_MANA_BURN.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Vos attaques normales ont une chance de brûler le mana de la cible infligeant un montant égal en Dégâts Sacrés. {0}% de chance de brûler le mana de la cible de 10",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8425,7 +8263,7 @@
     },
     "skills.TRM_MANA_BURN.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Dégâts Améliorés +1%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8443,7 +8281,7 @@
     },
     "skills.TRM_MANA_BURN.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Réductions de Dégâts 2%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8461,7 +8299,7 @@
     },
     "skills.TRM_MANA_BURN.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "PV max +1500",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8479,7 +8317,7 @@
     },
     "skills.TRM_OPPRESS.name": {
         "en": "",
-        "fr": "",
+        "fr": "Oppression",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8497,61 +8335,7 @@
     },
     "skills.TRM_OPPRESS.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRM_OPPRESS.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRM_OPPRESS.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRM_OPPRESS.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Dans les 5 prochaines secondes, vos attaques réduisent VIT et VIT ATQ de la cible de 50%. Les cibles oppréssés prennent 10% de dégâts supplémentaires",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8569,7 +8353,7 @@
     },
     "skills.TRM_VOID_SHOT.name": {
         "en": "",
-        "fr": "",
+        "fr": "Tir du Néant",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8587,61 +8371,7 @@
     },
     "skills.TRM_VOID_SHOT.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRM_VOID_SHOT.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRM_VOID_SHOT.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRM_VOID_SHOT.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Tire une flèche du néant sur la cible, infligeant (1000 +300% des MP manquants de la cible)",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8659,7 +8389,7 @@
     },
     "skills.TRM_HOLY_SHOT.name": {
         "en": "",
-        "fr": "",
+        "fr": "Esquive Sacrée",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8677,7 +8407,7 @@
     },
     "skills.TRM_HOLY_SHOT.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Après une Esquive réussie, augmente l'Attaque Sacrée de {0}. Peut s'accumuler 20 fois. Dure 10 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8695,7 +8425,7 @@
     },
     "skills.TRM_HOLY_SHOT.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "VIT ATQ +5%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8713,7 +8443,7 @@
     },
     "skills.TRM_HOLY_SHOT.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Précision Compétence +5%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8731,7 +8461,7 @@
     },
     "skills.TRM_HOLY_SHOT.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Compétence Améliorée +5%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8749,7 +8479,7 @@
     },
     "skills.TRM_VICTORY_SHADOW.name": {
         "en": "",
-        "fr": "",
+        "fr": "Victoire Nocturne",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8767,61 +8497,7 @@
     },
     "skills.TRM_VICTORY_SHADOW.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRM_VICTORY_SHADOW.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRM_VICTORY_SHADOW.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRM_VICTORY_SHADOW.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Sous Ombre Intérieur, augmente l'Attaque Sacrée de 1000",
         "es": "",
         "ch": "",
         "kr": "",
