--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -8515,7 +8515,7 @@
     },
     "skills.TWB_SWORD_EXPERTISE.name": {
         "en": "",
-        "fr": "",
+        "fr": "Spécialisation des Lames",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8533,7 +8533,7 @@
     },
     "skills.TWB_SWORD_EXPERTISE.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente Dégâts Améliorés de {0}%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8551,7 +8551,7 @@
     },
     "skills.TWB_SWORD_EXPERTISE.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "ATQ de Base +10",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8569,7 +8569,7 @@
     },
     "skills.TWB_SWORD_EXPERTISE.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "PV de base +1.5%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8587,7 +8587,7 @@
     },
     "skills.TWB_SWORD_EXPERTISE.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Dégâts Améliorés +2%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8605,7 +8605,7 @@
     },
     "skills.TWB_ENHC_SLAM.name": {
         "en": "",
-        "fr": "",
+        "fr": "Coup Puissant Amélioré",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8623,7 +8623,7 @@
     },
     "skills.TWB_ENHC_SLAM.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente les Dégâts de Compétences de {0}",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8641,7 +8641,7 @@
     },
     "skills.TWB_ENHC_SLAM.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Dégâts de Compétences +10",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8659,7 +8659,7 @@
     },
     "skills.TWB_ENHC_SLAM.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Dégâts de Compétences +99",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8677,7 +8677,7 @@
     },
     "skills.TWB_ENHC_SLAM.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Les effets des potions sont réduits de 33% pendant 5 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8695,7 +8695,7 @@
     },
     "skills.TWB_QUICK_CONCLUSION.name": {
         "en": "",
-        "fr": "",
+        "fr": "Achèvement Célère",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8713,7 +8713,7 @@
     },
     "skills.TWB_QUICK_CONCLUSION.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente VIT de {0}% et Précision Compétence de {0}%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8731,7 +8731,7 @@
     },
     "skills.TWB_QUICK_CONCLUSION.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Précision et Précision Compétence +1%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8749,7 +8749,7 @@
     },
     "skills.TWB_QUICK_CONCLUSION.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Réduction de Dégâts +2%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8767,7 +8767,7 @@
     },
     "skills.TWB_QUICK_CONCLUSION.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Précision Compétence Critique +8%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8785,7 +8785,7 @@
     },
     "skills.TWB_ENHC_LEAP.name": {
         "en": "",
-        "fr": "",
+        "fr": "Tranche Améliorée",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8803,61 +8803,7 @@
     },
     "skills.TWB_ENHC_LEAP.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWB_ENHC_LEAP.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWB_ENHC_LEAP.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWB_ENHC_LEAP.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Tranche étourdit la cible pendant 1,5 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8875,7 +8821,7 @@
     },
     "skills.TWB_SLASH_DOWN.name": {
         "en": "",
-        "fr": "",
+        "fr": "Coup Bas",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8893,7 +8839,7 @@
     },
     "skills.TWB_SLASH_DOWN.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente Compétence Améliorée de {0}%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8911,7 +8857,7 @@
     },
     "skills.TWB_SLASH_DOWN.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Défense Magique +4%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8929,7 +8875,7 @@
     },
     "skills.TWB_SLASH_DOWN.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "DEF de Base +20",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8947,7 +8893,7 @@
     },
     "skills.TWB_SLASH_DOWN.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Compétence Critique Améliorée +15%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8965,7 +8911,7 @@
     },
     "skills.TWB_SWORD_EXPERT.name": {
         "en": "",
-        "fr": "",
+        "fr": "Expert à l'Épée",
         "es": "",
         "ch": "",
         "kr": "",
@@ -8983,7 +8929,7 @@
     },
     "skills.TWB_SWORD_EXPERT.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Une attaque supplémentaire a {0}% de chance de s'activer. Ne peut s'activer qu'une fois toutes les 3sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9001,7 +8947,7 @@
     },
     "skills.TWB_SWORD_EXPERT.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente les chances d'activation de 7%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9019,7 +8965,7 @@
     },
     "skills.TWB_SWORD_EXPERT.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "VIT ATQ +20",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9037,7 +8983,7 @@
     },
     "skills.TWB_SWORD_EXPERT.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Réduit le délai d'activation de 1 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9055,7 +9001,7 @@
     },
     "skills.TWB_WILD_ROAR.name": {
         "en": "",
-        "fr": "",
+        "fr": "Rugissement Sauvage",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9073,61 +9019,7 @@
     },
     "skills.TWB_WILD_ROAR.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWB_WILD_ROAR.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWB_WILD_ROAR.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWB_WILD_ROAR.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Augmente les Dégâts Physiques, la Portée d'Attaque et les Dégâts Magique du groupe de 150. Dure 30 sec.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9145,7 +9037,7 @@
     },
     "skills.TWB_ENHC_TERMINATE.name": {
         "en": "",
-        "fr": "",
+        "fr": "Frappe Mortelle Améliorée",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9163,7 +9055,7 @@
     },
     "skills.TWB_ENHC_TERMINATE.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente les dégâts de Frappe Mortelle de {0}",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9181,7 +9073,7 @@
     },
     "skills.TWB_ENHC_TERMINATE.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": Dégâts de Frappe Mortelle +330"",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9199,7 +9091,7 @@
     },
     "skills.TWB_ENHC_TERMINATE.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Frappe Mortelle peut étourdir la cible pendant 1 sec.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9217,7 +9109,7 @@
     },
     "skills.TWB_ENHC_TERMINATE.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Temps de Recharge de Frappe Mortelle réduit de 4 sec.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9235,7 +9127,7 @@
     },
     "skills.TWB_ENHC_WAR_CRY.name": {
         "en": "",
-        "fr": "",
+        "fr": "Cri de Guerre Amélioré",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9253,7 +9145,7 @@
     },
     "skills.TWB_ENHC_WAR_CRY.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente les dégâts de Cri de Guerre de {0}",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9271,7 +9163,7 @@
     },
     "skills.TWB_ENHC_WAR_CRY.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente les dégâts de Cri de Guerre de 200",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9289,7 +9181,7 @@
     },
     "skills.TWB_ENHC_WAR_CRY.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Temps de Recharge de Cri de Guerre réduit de 5 sec.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9307,7 +9199,7 @@
     },
     "skills.TWB_ENHC_WAR_CRY.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente les dégâts de Cri de Guerre de 500",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9325,7 +9217,7 @@
     },
     "skills.TWB_WHIRLWIND.name": {
         "en": "",
-        "fr": "",
+        "fr": "Tourbillon",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9343,61 +9235,7 @@
     },
     "skills.TWB_WHIRLWIND.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWB_WHIRLWIND.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWB_WHIRLWIND.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWB_WHIRLWIND.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Attaque toutes les cibles dans un rayon de 6 mètres au tour de vous, les frappant 3 fois par seconde. Dure 17 sec.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9415,7 +9253,7 @@
     },
     "skills.TWB_PRECISE_STRIKE.name": {
         "en": "",
-        "fr": "",
+        "fr": "Frappe Chirurgicale",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9433,7 +9271,7 @@
     },
     "skills.TWB_PRECISE_STRIKE.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente Précision Compétence de {0}% et Précision de {0}%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9451,7 +9289,7 @@
     },
     "skills.TWB_PRECISE_STRIKE.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Précision Compétence +5% et Précision +10%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9469,7 +9307,7 @@
     },
     "skills.TWB_PRECISE_STRIKE.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Compétence Critique Améliorée +5%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9487,7 +9325,7 @@
     },
     "skills.TWB_PRECISE_STRIKE.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Vos Attaques ont 20% de chance de réduire Réduction de Dégâts de la cible de 5%. Dure 5 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9505,7 +9343,7 @@
     },
     "skills.TWB_ENHC_CRIT_SLASH.name": {
         "en": "",
-        "fr": "",
+        "fr": "Lame Critique Améliorée",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9523,61 +9361,7 @@
     },
     "skills.TWB_ENHC_CRIT_SLASH.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWB_ENHC_CRIT_SLASH.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWB_ENHC_CRIT_SLASH.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWB_ENHC_CRIT_SLASH.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "1 Lame critique additionnelle. L'augmentation de Chance Critique s'applique aussi aux compétences",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9595,7 +9379,7 @@
     },
     "skills.TWB_SWIPE.name": {
         "en": "",
-        "fr": "",
+        "fr": "Balayage",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9613,61 +9397,7 @@
     },
     "skills.TWB_SWIPE.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWB_SWIPE.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWB_SWIPE.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWB_SWIPE.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Inflige 150% de dégâts et 280 de dégâts de compétence supplémentaire jusqu'à 15 cibles à une distance de 72 mètres en face de vous.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9685,7 +9415,7 @@
     },
     "skills.TWB_EXCELLENT_SKILL.name": {
         "en": "",
-        "fr": "",
+        "fr": "Aptitude Supérieur",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9703,7 +9433,7 @@
     },
     "skills.TWB_EXCELLENT_SKILL.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente Compétence Améliorée de {0}% et Attaque Sacrée de {0}.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9721,7 +9451,7 @@
     },
     "skills.TWB_EXCELLENT_SKILL.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "PM max +250",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9739,7 +9469,7 @@
     },
     "skills.TWB_EXCELLENT_SKILL.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "PV max +3000",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9757,7 +9487,7 @@
     },
     "skills.TWB_EXCELLENT_SKILL.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Vitesse de Déplacement en lançant un sort +10",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9775,7 +9505,7 @@
     },
     "skills.TWB_FEARLESS.name": {
         "en": "",
-        "fr": "",
+        "fr": "Intrépide",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9793,61 +9523,7 @@
     },
     "skills.TWB_FEARLESS.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWB_FEARLESS.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWB_FEARLESS.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWB_FEARLESS.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Augmente Précision Compétence de 200% sous l'effet Héritage Sanguinaire Immunisé au Silence.",
         "es": "",
         "ch": "",
         "kr": "",
